	Fixed slapd-meta no candidate target selected bug (ITS#3990)
	Fixed slapd-meta matchedDN handling (ITS#3944)
	Fixed slapd-monitor hiding issue (ITS#3986)
	Fixed slapo-ppolicy lockout status at Bind (ITS#3946)
	Fixed slaptest cn=config segfault (ITS#3961)
	Fixed slaptools logging issue (ITS#3937)
	Fixed slaptools fails after db clean (ITS#3970)
	Fixed libldap schema handling
	Fixed libldap secprops parsing (ITS#3955)
	Updated liblutil password scheme check
	Updated libldap schema to allow OID macros in syntaxes
	Removed lint
	Build Environment
		Updated build tools (ITS#3928)
		Fixed tests diff -u usage (ITS#3969)
		Fixed slapo-rwm dependency checking (ITS#3965)
		Fixed tests --disable-monitor support
		Fixed tests veryclean-local testdata cleanup
		Add subtree rename test (hdb only)
	

OpenLDAP 2.3.6 Release
	Fixed slapd dnRelativeMatch return (ITS#3931)
	Fixed slapd send_search_entry issue (ITS#3951)
	Fixed slapd-bdb/hdb release entry in paged response
	Fixed slapd-meta resources release issue (ITS#3943)
	Fixed slapd-ldap/meta matched return (ITS#3942,ITS#3944)
	Fixed slapo-ppolicy reset lockouts issue (ITS#3946)
	Fixed nis.schema posixGroup object class kind (ITS#3941)
	Revert librewrite regex mutex change (ITS#3932)
	Updated slapd manage capability
	Updated slapo-syncprov CSN filter checks
	Updated libldap url list parsing
	Added slapd SASL rootpw support (ITS#3845)
	Added slapd Stats logging for additional cases
	Added slapd ACI syntax validater (ITS#3877)
	Added slapd posixgroup ACL module to contrib
	Added slapi SLAPI_X_ADD_STRUCTURAL_CLASS extension
	Added slapd-ldap subtree renaming proxing
	Added slapd-meta overlapping targets enhancement (ITS#3711)
	Removed lint
	Documentation
		Added slapcat(8) -a usage example (ITS#3930)
		Updated slapo-unique(5) for clarity (ITS#3936)
		Updated slapo-syncprov(5) sessionlog description (ITS#3935)
		Updated doc/drafts
	Build Environment
		Updated test prog bind retry code
		Fixed test015-xsearch regression (ITS#3506)