@@ -25,8 +25,11 @@ is used to add entries specified in LDAP Directory Interchange Format
 database.
 It opens the given database determined by the database number or
 suffix and adds entries corresponding to the provided LDIF to
-the database.  The LDIF input is read from standard input or
-the specified file.
+the database.
+Subordinate databases glued with
+.BR slapo-glue (5)
+are also updated.
+The LDIF input is read from standard input or the specified file.
 .LP
 As
 .B slapadd
