@@ -27,6 +27,9 @@ database.
 It opens the given database determined by the database number or
 suffix and writes the corresponding LDIF to standard output or
 the specified file.
+Subordinate databases glued with
+.BR slapo-glue (5)
+are also output.
 .LP
 The LDIF generated by this tool is suitable for use with
 .BR slapadd (8).
