@@ -24,6 +24,9 @@ indices based upon the current contents of a database.
 It opens the given database determined by the database number or
 suffix and updates the indices for all values of all attributes
 of all entries.
+Subordinate databases glued with
+.BR slapo-glue (5)
+are also re-indexed.
 .SH OPTIONS
 .TP
 .B \-v
