@@ -237,7 +237,7 @@ slapacl( int argc, char **argv )
 		if ( !be->be_entry_open ||
 			!be->be_entry_close ||
 			!be->be_dn2id_get ||
-			!be->be_entry_get )
+			!be->be_id2entry_get )
 		{
 			fprintf( stderr, "%s: target database "
 				"doesn't support necessary operations; "
